--- a/package.json
+++ b/package.json
@@ -13,20 +13,25 @@
     "aura": "file:",
     "expo": "~51.0.14",
     "expo-constants": "~16.0.2",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.16",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.14.1",
+    "lucide-react-native": "^0.453.0",
     "nativewind": "^2.0.11",
     "react": "^18.2.0",
     "react-native": "^0.74.5",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "recoil": "^0.7.7",
-    "sehat-manzil": "file:"
+    "sehat-manzil": "file:",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
